# TwitterDiscordBot

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  twitter-discord-bot.code-workspace  unit_test.yml
configs/: discord_webhooks.ini.sample  twitter_accounts.yml.sample  twitter_secrets.ini.sample
discord-forwarder/: pyproject.toml
discord-forwarder/discord-forwarder/: __main__.py  discord_forwarder.py
discord-forwarder/test/: test_discord.py
rss-receiver/: pyproject.toml
rss-receiver/rss-receiver/: __main__.py  configs.py
test/: help.py  test.py  test_discord.py  test_twitter.py
twitter-receiver/: .pylintrc  pyproject.toml
twitter-receiver/configs/: last_fetched_tweets.yml.sample
twitter-receiver/twitter-receiver/: __main__.py  configs.py  test_twitter.py  twitter_receiver.py
twitter_discord_bot/: debug.py  discord_api.py  models.py  twitter_api.py  twitter_discord_bot.py
